--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
 }
 
 body {
-  background: #14142e;
+  background: #000000;
   font-family: "Lora", serif;
   font-size: 1.7rem;
   font-style: normal;
